@@ -1,3 +1,6 @@
+2007-02-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/transaction.hxx, include/pqxx/trigger.hxx, src/tablewriter.cxx:
+  - Updated copyright notices
 2007-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configitems, configure.ac.in, src/util.cxx:
   - Use strlcpy() instead of strncpy() where available
